# Reefscape2025

./: .gitignore  2025_Elastic  build.gradle  calib_default.yml  trajectories.chor
.github/workflows/: build.yml  lint-format.yml
.wpilib/: wpilib_preferences.json
aquila/: .gitignore  meson.build
aquila/subprojects/: wpilib.wrap
ascope_assets/Robot_EagleRay/: config.json  model_2.glb
ascope_assets/Robot_REEFSCAPE2025/: config.json  model_0.glb
camera_calibrations/: frontleft_calibration@1280x800.json  frontleft_calibration@800x600.json  frontright_calibration@1280x800.json  frontright_calibration@800x600.json  mrcalibration_testcam2@800x600.json  mrcalibration_testcam@1280x800.json
choreo_trajectories/: choreo.chor  taxi.traj
northstar/: __init__.py  vision_types.py
northstar/config/: config.py
northstar/pipeline/: PoseEstimator.py
northstar_NOTUSED/: README.md  config.json
northstar_NOTUSED/calibration/: CalibrationCommandSource.py  CalibrationSession.py
northstar_NOTUSED/config/: ConfigSource.py
northstar_NOTUSED/output/: OutputPublisher.py  VideoWriter.py  overlay_util.py
northstar_NOTUSED/pipeline/: CameraPoseEstimator.py  Capture.py
reef_selector/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
reef_selector/src/: main.ts
talonvision/: Capture.py  FiducialDetector.py  StreamServer.py  __init__.py  config.py  main.py  vision_types.py
vendordeps/: REVLib.json
vision/: Earthfile
vision/northstar/: __init__.py  calibration.json  config.json  config_orangepi.json  localconfig.json
vision/pose_calib/: convert_calib.py  (+4 more)
(+175 files in other folders)
